added docs for all endpoints, initiated [PUT] UpdProfile
