# docs/wtc/swagger.json
@@ -16,6 +16,83 @@
     "host": "localhost:9000",
     "basePath": "/api/v1",
     "paths": {
+        "/data": {
+            "get": {
+                "description": "get information from Bearer JWT Access Token(oAuth)",
+                "consumes": [
+                    "*/*"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Account"
+                ],
+                "summary": "get profile information",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "H.Authorization: Bearer `token`",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.GetProfileInfoResponseOK"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/model.GetProfileInfoResponseBR"
+                        }
+                    }
+                }
+            }
+        },
+        "/login": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Account"
+                ],
+                "summary": "login into an account",
+                "parameters": [
+                    {
+                        "description": "user log model",
+                        "name": "LogProfileModel",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.LogProfileRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.LogProfileResponseOK"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/model.LogProfileResponseBR"
+                        }
+                    }
+                }
+            }
+        },
         "/register": {
             "post": {
                 "description": "register new profile to be able to use WTC.",
@@ -26,16 +103,17 @@
                     "application/json"
                 ],
                 "tags": [
-                    "account"
+                    "Account"
                 ],
                 "summary": "register new profile in WTC system",
                 "parameters": [
                     {
-                        "description": "hello string",
+                        "description": "user reg model",
                         "name": "CreateProfileModel",
                         "in": "body",
+                        "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.CreateProfileRequest"
+                            "$ref": "#/definitions/model.RegProfileRequest"
                         }
                     }
                 ],
@@ -49,7 +127,13 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/model.RegProfileResponseFailure"
+                            "$ref": "#/definitions/model.RegProfileResponseBR"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "$ref": "#/definitions/model.RegProfileResponseFN"
                         }
                     }
                 }
@@ -57,13 +141,22 @@
         }
     },
     "definitions": {
-        "model.CreateProfileRequest": {
+        "model.GetProfileInfoResponseBR": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "description": "A response returned from the server.",
+                    "type": "string"
+                }
+            }
+        },
+        "model.GetProfileInfoResponseOK": {
             "type": "object",
             "properties": {
                 "email": {
                     "type": "string"
                 },
-                "password": {
+                "sex": {
                     "type": "string"
                 },
                 "username": {
@@ -71,11 +164,72 @@
                 }
             }
         },
-        "model.RegProfileResponseFailure": {
+        "model.LogProfileRequest": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "description": "user's email",
+                    "type": "string"
+                },
+                "password": {
+                    "description": "user's password",
+                    "type": "string"
+                }
+            }
+        },
+        "model.LogProfileResponseBR": {
             "type": "object",
             "properties": {
                 "message": {
-                    "description": "A response returned from the server.\ne.g. \"No records were found\"",
+                    "description": "A response returned from the server.\ne.g. \"No records were found\".",
+                    "type": "string"
+                }
+            }
+        },
+        "model.LogProfileResponseOK": {
+            "type": "object",
+            "properties": {
+                "access_token": {
+                    "description": "Access token to auth API requests.",
+                    "type": "string"
+                },
+                "refresh_token": {
+                    "description": "Refresh token to recreate access token.",
+                    "type": "string"
+                }
+            }
+        },
+        "model.RegProfileRequest": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "description": "user's email",
+                    "type": "string"
+                },
+                "password": {
+                    "description": "user's password",
+                    "type": "string"
+                },
+                "username": {
+                    "description": "user's username",
+                    "type": "string"
+                }
+            }
+        },
+        "model.RegProfileResponseBR": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "description": "A response returned from the server.",
+                    "type": "string"
+                }
+            }
+        },
+        "model.RegProfileResponseFN": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "description": "A response returned from the server.\ne.g. \"ERROR: duplicate key value violates unique constraint\".",
                     "type": "string"
                 }
             }
@@ -84,7 +238,7 @@
             "type": "object",
             "properties": {
                 "message": {
-                    "description": "A response returned from the server.\ne.g. \"Successfully registered\"",
+                    "description": "A response returned from the server.\ne.g. \"Successfully registered\".",
                     "type": "string"
                 }
             }
