# internal/data/model/request.go
@@ -1,7 +1,17 @@
 package model
 
 type RegProfileRequest struct {
-	Email    string `json:"email"`
+	// user's email
+	Email string `json:"email"`
+	// user's password
 	Password string `json:"password"`
+	// user's username
 	Username string `json:"username"`
+}
+
+type LogProfileRequest struct {
+	// user's email
+	Email string `json:"email"`
+	// user's password
+	Password string `json:"password"`
 }
