# internal/handlers/get_profile_data.go
@@ -7,6 +7,16 @@ import (
 	"net/http"
 )
 
+// GetProfileData godoc
+// @Summary get profile information
+// @Description get information from Bearer JWT Access Token(oAuth)
+// @Tags Account
+// @Accept */*
+// @Produce json
+// @Param Authorization header string true "H.Authorization: Bearer `token`"
+// @Success 200 {object} model.GetProfileInfoResponseOK
+// @Success 400 {object} model.GetProfileInfoResponseBR
+// @Router /data [get]
 func GetProfileData(e echo.Context) error {
 	id := e.Get("id").(string)
 	userDB := new(model.UserProfile)
